--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-    <img class="d-p"src="images/dayal.png" alt="myphoto">
+    <img class="d-p"src="dayal.png" alt="myphoto">
     
     </div>
     <div>
@@ -29,7 +29,7 @@
         <h1 class="in-t">I am Learning Python, Front End Development, Farming, Back End Development</h1>
         <hr>
         <h4>My Skills</h4>
-        <img class= "skills1" src="images/python-circle.png" alt="python">
+        <img class= "skills1" src="python-circle.png" alt="python">
        
     </div>
     <div>
